fixes responsive, active states

--- a/styles.css
+++ b/styles.css
@@ -217,6 +217,11 @@ form button {
   right: 48.5%;
   top: 7%;
   cursor: pointer;
+  color: #121725;
+}
+
+form button:hover {
+  background-color: #b3ffe2;
 }
 
 .logo-row {
@@ -268,6 +273,7 @@ form button {
     z-index: 1;
     margin-left: auto;
     margin-right: auto;
+    top: -3em;
     left: 0;
     right: 0;
     text-align: center;
@@ -297,6 +303,9 @@ form button {
   }
   .inner-content h1 {
     font-size: 26px;
+  }
+  .inner-content p {
+    font-size: 15px;
   }
   .logo-row {
     width: 100%;
