responsive mobile styles

--- a/styles.css
+++ b/styles.css
@@ -276,6 +276,7 @@ form button:hover {
     top: -3em;
     left: 0;
     right: 0;
+    width: 100px;
     text-align: center;
   }
   .pattern {
@@ -300,6 +301,7 @@ form button:hover {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    gap: 5px;
   }
   .inner-content h1 {
     font-size: 26px;
@@ -325,6 +327,8 @@ form button:hover {
         -ms-flex-direction: column;
             flex-direction: column;
     gap: 16px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
   form input {
     width: 327px;
